# mwe_sound_world_with_character

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  conanfile.txt  main.cpp  readme.txt
assets/backpack/: backpack.mtl
assets/maps/: overlook.mtl
assets/textures/: readme.txt
graphics/: graphics.cpp  graphics.hpp
graphics/shaders/: CWL_v_transformation_with_texture_position_passthrough.vert  textured.frag
sound/: load_sound_file.cpp  load_sound_file.hpp  sound.cpp  sound.hpp  sound_system.cpp  sound_system.hpp
src/: main.cpp
src/graphics/: graphics.cpp  graphics.hpp
src/interaction/character/: character.hpp
